--- a/loginwindow.ui
+++ b/loginwindow.ui
@@ -76,7 +76,7 @@
      <string>LogIn</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="pushButton_register">
     <property name="geometry">
      <rect>
       <x>300</x>
