--- a/registerwindow.ui
+++ b/registerwindow.ui
@@ -131,7 +131,7 @@
    <widget class="QLabel" name="label_day">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>170</x>
       <y>190</y>
       <width>49</width>
       <height>16</height>
@@ -144,7 +144,7 @@
    <widget class="QLabel" name="label_year">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>240</x>
       <y>190</y>
       <width>49</width>
       <height>16</height>
@@ -172,10 +172,15 @@
      <rect>
       <x>60</x>
       <y>210</y>
-      <width>72</width>
+      <width>91</width>
       <height>24</height>
      </rect>
     </property>
+    <item>
+     <property name="text">
+      <string/>
+     </property>
+    </item>
     <item>
      <property name="text">
       <string>January</string>
@@ -240,7 +245,7 @@
    <widget class="QLineEdit" name="lineEdit_day">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>170</x>
       <y>210</y>
       <width>41</width>
       <height>24</height>
@@ -250,7 +255,7 @@
    <widget class="QLineEdit" name="lineEdit_year">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>240</x>
       <y>210</y>
       <width>61</width>
       <height>24</height>
@@ -260,7 +265,7 @@
    <widget class="QLabel" name="label_error3">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>330</x>
       <y>210</y>
       <width>131</width>
       <height>16</height>
